Fixing an issue with carousel on mobile

--- a/styles.css
+++ b/styles.css
@@ -15,36 +15,36 @@
 /* media queries */
 /* X-Small devices (portrait phones, less than 576px) */
 @media (min-width: 576px) {
-  .tech-icon{
-    font-size: 0.5rem;
+  .tech-icon, .description p, .third-section{
+    font-size: 0.75rem;
   }
 }
 
 /* Small devices (landscape phones, less than 768px) */
 @media (min-width: 768px) {
-  .tech-icon{
-    font-size: 0.75rem;
+  .tech-icon, .description p, .third-section{
+    font-size: 1rem;
   }
 }
 
 /* Medium devices (tablets, less than 992px) */
 @media (min-width: 992px) {
-  .tech-icon{
-    font-size: 1rem;
+  .tech-icon, .description p, .third-section{
+    font-size: 1.25rem;
   }
 }
 
 /* Large devices (desktops, less than 1200px) */
 @media (min-width: 1200px) {
-  .tech-icon{
-    font-size: 1.25rem;
+  .tech-icon, .description p{
+    font-size: 1.5rem;
   }
 }
 
 /* X-Large devices (large desktops, less than 1400px) */
 @media (min-width: 1400px) {
-  .tech-icon{
-    font-size: 1.5rem;
+  .tech-icon, .description p{
+    font-size: 1.75rem;
   }
 }
 
@@ -158,6 +158,11 @@ h1 ,h2 ,h3 ,h4 {
   width: 100%;
   padding: 30px 0;
 }
+
+.tech-icon{
+  padding: 0 5px;
+}
+
 .carousel-inner .carousel-item {
   transition: -webkit-transform 15s linear;
   transition: transform 15s linear;
@@ -171,7 +176,6 @@ h1 ,h2 ,h3 ,h4 {
 .description p {
   padding-top: 2.5%;
   padding-bottom: 2.5%;
-  font-size: 1.5rem;
 }
 .description *{
   transition: fadeIn ease 5s;
@@ -188,7 +192,7 @@ h1 ,h2 ,h3 ,h4 {
 .third-section {
   padding: 2.5% 5%;
   padding-bottom: 3%;
-  font-size: 1.25rem;
+  /* font-size: 1.25rem; */
 }
 .worker{
   text-align: center;
